Bug 385517 - Wrong icon in downloading notification pop-up
Summary: Wrong icon in downloading notification pop-up
Status: RESOLVED FIXED
Alias: None
Product: plasma-browser-integration
Classification: Plasma
Component: Firefox (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords:
: 385528 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-09 13:15 UTC by Alexandre Bouvier
Modified: 2018-03-21 08:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example of notification pop-up (12.61 KB, image/png)
2017-10-09 13:15 UTC, Alexandre Bouvier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bouvier 2017-10-09 13:15:24 UTC
Created attachment 108241 [details]
example of notification pop-up

The icon of Chrome, instead of Firefox, is displayed in the downloading notification pop-up.

OS: Arch Linux
plasma-browser-integration: last git commit
Firefox: 56.0
Plasma Integration: 0.0.3
Icon Theme: Papirus
Comment 1 Kai Uwe Broulik 2017-10-09 18:09:13 UTC
*** Bug 385528 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2017-10-09 18:11:58 UTC
Confirmed. Currently in main.cpp the application name and icon is hardcoded to Chrome. Instead it should be set in settings.cpp once the browser identifies itself to us.
Comment 3 Kai Uwe Broulik 2018-03-21 08:52:55 UTC
Git commit 3d8e61b3901fbc5dd943a3db5fd93d15f3af2b6a by Kai Uwe Broulik.
Committed on 21/03/2018 at 08:52.
Pushed by broulik into branch 'master'.

Set proper application name once browser identifies to us

This information is mainly used for download progress so it shouldn't hurt if it's set quite late in the process.

Differential Revision: https://phabricator.kde.org/D11512

M  +1    -3    host/main.cpp
M  +40   -1    host/settings.cpp
M  +13   -2    host/settings.h

https://commits.kde.org/plasma-browser-integration/3d8e61b3901fbc5dd943a3db5fd93d15f3af2b6a