Set proper application name once browser identifies to us

This information is mainly used for download progress so it shouldn't hurt if it's set quite late in the process.

BUG: 385517

Differential Revision: https://phabricator.kde.org/D11512